smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/use/use-statement-invalid-id.smithy
// Parse error at line 4, column 11 near `smithy.api#`: Invalid shape ID: smithy.api#
$version: "0.1.0"

use shape smithy.api#!
